--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "firebase": "^5.2.0",
     "native-base": "^2.6.1",
     "react": "16.3.1",
-    "react-native": "^0.55.4"
+    "react-native": "^0.55.4",
+    "react-navigation": "^2.5.5"
   },
   "devDependencies": {
     "babel-jest": "23.2.0",
