--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "firebase": "^5.2.0",
-    "native-base": "^2.6.1",
-    "react": "16.3.1",
-    "react-native": "^0.55.4",
+    "native-base": "^2.8.0",
+    "react": "16.4.1",
+    "react-native": "0.56.1",
     "react-navigation": "^2.5.5"
   },
   "devDependencies": {
-    "babel-jest": "23.2.0",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "23.2.0",
-    "react-test-renderer": "16.3.1"
+    "babel-jest": "23.6.0",
+    "babel-preset-react-native": "^5",
+    "jest": "23.6.0",
+    "react-test-renderer": "16.4.1"
   },
   "jest": {
     "preset": "react-native"
