--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "eslint-plugin-babel": "^5.2.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
-    "lint-staged": "7.2.2",
+    "husky": "^0.14.3",
     "jest": "23.6.0",
+    "lint-staged": "7.2.2",
     "prettier": "^1.14.2",
     "react-test-renderer": "16.4.1"
   },
