--- a/package.json
+++ b/package.json
@@ -35,12 +35,17 @@
     "native-base": "^2.8.0",
     "react": "16.4.1",
     "react-native": "0.56.1",
-    "react-navigation": "^2.5.5"
+    "react-navigation": "^2.5.5",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
     "babel-jest": "23.6.0",
-    "babel-preset-react-native": "^5",
+    "babel-preset-react-native": "^4.0.1",
     "eslint": "^5.5.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-babel": "^5.2.0",
@@ -50,7 +55,8 @@
     "jest": "23.6.0",
     "lint-staged": "7.2.2",
     "prettier": "^1.14.2",
-    "react-test-renderer": "16.4.1"
+    "react-test-renderer": "16.4.1",
+    "redux-mock-store": "^1.5.3"
   },
   "jest": {
     "preset": "react-native"
