--- a/package.json
+++ b/package.json
@@ -58,6 +58,15 @@
     "redux-mock-store": "^1.5.3"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.js$": "./node_modules/react-native/jest/preprocessor.js"
+    },
+    "transformIgnorePatterns": [
+      "./node_modules/(?!react-native|react-navigation)/"
+    ],
+    "globals": {
+      "window": {}
+    }
   }
 }
