--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "husky": "^0.14.3",
     "jest": "23.6.0",
     "lint-staged": "7.2.2",
+    "mock-async-storage": "^2.0.3",
     "prettier": "^1.14.2",
     "react-test-renderer": "16.4.1",
     "redux-mock-store": "^1.5.3"
