--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "native-base": "^2.8.0",
+    "prop-types": "^15.7.2",
     "react": "16.4.1",
     "react-native": "0.56.1",
     "react-navigation": "^2.5.5",
