--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.3.1",
     "babel-eslint": "^9.0.0",
     "babel-jest": "23.6.0",
     "babel-preset-react-native": "^5.0.1",
@@ -56,6 +57,7 @@
     "lint-staged": "7.2.2",
     "mock-async-storage": "^2.0.3",
     "prettier": "^1.14.2",
+    "react-native-testing-library": "^1.5.0",
     "react-test-renderer": "16.4.1",
     "redux-mock-store": "^1.5.3"
   },
